[FIXED JENKINS-28455] Build History badges don't wrap
(cherry picked from commit 35eb8ac93e5c232b9fd18fa4e36f9bebe84fda7e)

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -1036,6 +1036,10 @@ table.parameters > tbody:hover {
   width: 70%;
   text-align: right;
 }
+.build-row-cell .build-badge span:after {
+    content: " ";
+    font-size: 0%;
+}
 .build-row .build-name-controls .pane.build-name,
 .build-row .build-details-controls .pane.build-details {
   width: 70%;
